YACC-BISSON JP/Ejemplo 2 - Calculadora Infija/obj/Ejemplo_Calculadora_Notacion_Infija.output
Gramática

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: '\n'
    4     | exp '\n'

    5 exp: NUM
    6    | ENTERO
    7    | exp '+' exp
    8    | exp '-' exp
    9    | exp '*' exp
   10    | exp '/' exp
   11    | exp '^' exp
   12    | '-' exp
   13    | '(' exp ')'


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3 4
    '(' (40) 13
    ')' (41) 13
    '*' (42) 9
    '+' (43) 7
    '-' (45) 8 12
    '/' (47) 10
    '^' (94) 11
    error (256)
    NUM <dval> (258) 5
    ENTERO <ival> (259) 6


No terminales con las reglas donde aparecen

    $accept (13)
        on left: 0
    input (14)
        on left: 1 2
        on right: 0 2
    line (15)
        on left: 3 4
        on right: 2
    exp <dval> (16)
        on left: 5 6 7 8 9 10 11 12 13
        on right: 4 7 8 9 10 11 12 13


Estado 0

    0 $accept: • input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


Estado 1

    0 $accept: input • $end
    2 input: input • line

    $end    desplazar e ir al estado 2
    NUM     desplazar e ir al estado 3
    ENTERO  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 6
    '\n'    desplazar e ir al estado 7

    line  ir al estado 8
    exp   ir al estado 9


Estado 2

    0 $accept: input $end •

    $default  aceptar


Estado 3

    5 exp: NUM •

    $default  reduce usando la regla 5 (exp)


Estado 4

    6 exp: ENTERO •

    $default  reduce usando la regla 6 (exp)


Estado 5

   12 exp: '-' • exp

    NUM     desplazar e ir al estado 3
    ENTERO  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 6

    exp  ir al estado 10


Estado 6

   13 exp: '(' • exp ')'

    NUM     desplazar e ir al estado 3
    ENTERO  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 6

    exp  ir al estado 11


Estado 7

    3 line: '\n' •

    $default  reduce usando la regla 3 (line)


Estado 8

    2 input: input line •

    $default  reduce usando la regla 2 (input)


Estado 9

    4 line: exp • '\n'
    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp
   11    | exp • '^' exp

    '+'   desplazar e ir al estado 12
    '-'   desplazar e ir al estado 13
    '*'   desplazar e ir al estado 14
    '/'   desplazar e ir al estado 15
    '^'   desplazar e ir al estado 16
    '\n'  desplazar e ir al estado 17


Estado 10

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp
   11    | exp • '^' exp
   12    | '-' exp •

    '*'  desplazar e ir al estado 14
    '/'  desplazar e ir al estado 15
    '^'  desplazar e ir al estado 16

    $default  reduce usando la regla 12 (exp)


Estado 11

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp
   11    | exp • '^' exp
   13    | '(' exp • ')'

    '+'  desplazar e ir al estado 12
    '-'  desplazar e ir al estado 13
    '*'  desplazar e ir al estado 14
    '/'  desplazar e ir al estado 15
    '^'  desplazar e ir al estado 16
    ')'  desplazar e ir al estado 18


Estado 12

    7 exp: exp '+' • exp

    NUM     desplazar e ir al estado 3
    ENTERO  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 6

    exp  ir al estado 19


Estado 13

    8 exp: exp '-' • exp

    NUM     desplazar e ir al estado 3
    ENTERO  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 6

    exp  ir al estado 20


Estado 14

    9 exp: exp '*' • exp

    NUM     desplazar e ir al estado 3
    ENTERO  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 6

    exp  ir al estado 21


Estado 15

   10 exp: exp '/' • exp

    NUM     desplazar e ir al estado 3
    ENTERO  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 6

    exp  ir al estado 22


Estado 16

   11 exp: exp '^' • exp

    NUM     desplazar e ir al estado 3
    ENTERO  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 6

    exp  ir al estado 23


Estado 17

    4 line: exp '\n' •

    $default  reduce usando la regla 4 (line)


Estado 18

   13 exp: '(' exp ')' •

    $default  reduce usando la regla 13 (exp)


Estado 19

    7 exp: exp • '+' exp
    7    | exp '+' exp •
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp
   11    | exp • '^' exp

    '*'  desplazar e ir al estado 14
    '/'  desplazar e ir al estado 15
    '^'  desplazar e ir al estado 16

    $default  reduce usando la regla 7 (exp)


Estado 20

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    8    | exp '-' exp •
    9    | exp • '*' exp
   10    | exp • '/' exp
   11    | exp • '^' exp

    '*'  desplazar e ir al estado 14
    '/'  desplazar e ir al estado 15
    '^'  desplazar e ir al estado 16

    $default  reduce usando la regla 8 (exp)


Estado 21

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
    9    | exp '*' exp •
   10    | exp • '/' exp
   11    | exp • '^' exp

    '^'  desplazar e ir al estado 16

    $default  reduce usando la regla 9 (exp)


Estado 22

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp
   10    | exp '/' exp •
   11    | exp • '^' exp

    '^'  desplazar e ir al estado 16

    $default  reduce usando la regla 10 (exp)


Estado 23

    7 exp: exp • '+' exp
    8    | exp • '-' exp
    9    | exp • '*' exp
   10    | exp • '/' exp
   11    | exp • '^' exp
   11    | exp '^' exp •

    $default  reduce usando la regla 11 (exp)
